# relativistic-ray-tracer

./: README.md
docs/: proposal.md
final/: README.md
final/paper/: paper.bib  paper.tex
milestone/: README.md
milestone/paper/: .gitignore  paper.bib  paper.tex
pathtracer/: CMakeLists.txt  FindOpenCL.cmake  tests.ipynb
pathtracer/CGL/include/CGL/: spectrum.h
pathtracer/cuda_src/: CMakeLists.txt  bsdf.cu  helper.cu  intersect.cu  kernel.cu  kernel.h  light.cu  setup.cu  setup.h
pathtracer/dae/sky/: CBbunny.dae  CBbunny_microfacet_cu.dae  CBcoil.dae  CBempty.dae  CBgems.dae  CBspheres_lambertian.dae  CBspheres_microfacet_al_ag.dae~HEAD  CBspheres_tex.dae  bunny.dae  bunny_microfacet_cu.dae  bunny_microfacet_cu_unlit.dae  bunny_unlit.dae
pathtracer/docs/: README.md
pathtracer/lib3-1/Debug/: lib3-1_windows.lib
pathtracer/lib3-1/Release/: lib3-1_windows.lib
pathtracer/src/: CMakeLists.txt  application.cpp  application.h  bbox.cpp  blackbodyspectrum.cpp  blackbodyspectrum.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  intersection.h  lightspectrum.cpp  lightspectrum.h  main.cpp  part1_code.cpp  pathtracer.cpp  pathtracer.h  ray.h  raytrace.cl  setupCL.cpp  test.cpp
pathtracer/src/kernels/: raytrace.cl
pathtracer/src/misc/: getopt.c
pathtracer/src/static_scene/: blackhole.cpp  blackhole.h  environment_light.cpp  environment_light.h  light.h  primitive.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
