cmake_minimum_required(VERSION 2.8)

project(GPUAccel)

find_package(CUDA QUIET REQUIRED)

# ASSUMES DEBIAN OCF DISTRO, IDK FOR MAC OR WINDOWS

list(APPEND CUDA_NVCC_FLAGS "-std=c++11 -O3")
SET(CUDA_PROPAGATE_HOST_FLAGS OFF)

file(GLOB GPUSRC
	"kernel.cu"
)

CUDA_ADD_LIBRARY(
	GPUAccel SHARED
	${GPUSRC})
